# proximity_API

./: .gitignore  Dockerfile  debug_output.csv  map.geojson  pruebas.ipynb  pyproject.toml
src/proxi_API/: __init__.py  main.py
src/proxi_API/core/: config.py  endpoints.py  routers.py
src/proxi_API/data/: bcn_districts.csv  db_methods.py  settings.py
src/proxi_API/data/POIs/: categories.json
src/proxi_API/model/: data_aggregation.py  data_processing.py  h3_mapping.py  mobility_indices.py  proximity_computation.py  setup_city.py
src/proxi_API/schemas/: schemas.py
