[project]
name = "proxi_API"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.2.1",
    "fastapi==0.115.6",
    "geopandas>=1.0.1",
    "h3>=4.2.1",
    "joblib>=1.4.2",
    "osmnx>=2.0.1",
    "passlib[bcrypt]==1.7.4",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
]
