[project]
name = "proxi_API"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "commitizen>=4.2.1",
    "fastapi==0.115.6",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "h3>=4.2.1",
    "inequality>=1.1.1",
    "joblib>=1.4.2",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "osmnx>=2.0.1",
    "passlib[bcrypt]==1.7.4",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "rioxarray>=0.18.2",
    "seaborn>=0.13.2",
    "uvicorn==0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["proxi_API"]
package-dir = {"" = "src"}

[project.scripts]
proxiapi = "proxi_API.__init__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["proxi_API*"]

